# smart-buffer-cpp

./: .clang-format  CMakeLists.txt  Makefile  SmartBuffer.cpp  clang.sh  main.cpp
exemple/: exemple.cpp
include/: SmartBuffer.hpp  SmartBuffer.inl
src/: SmartBuffer.cpp  main.cpp
